# tiny-brainfuck-experiments

./: README.md  pyproject.toml
tiny_brainfuck/: basic-minify.py  bf.py  increment_generator.py  increment_generator_v2.py
